Fixed spacing and sizing for mobile

--- a/src/Inputs.css
+++ b/src/Inputs.css
@@ -37,6 +37,13 @@
     color: gray;
 }
 
+.radio {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 @media (max-width: 700px) {
     .input-text, .dollar-sign-display, .input-field {
         font-size: large;
@@ -49,5 +56,10 @@
     }
     .loan-amount-input-field {
         width: 60px;
+    }
+    .input {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
